force-app/main/default/objects/Opportunity/fields/Competitor_Primary__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Primary__c</fullName>
    <description>Main rival supplier the rep is up against in this deal, grouped by competitor type rather than by company name so win and loss rates stay comparable across regions.</description>
    <label>Primary Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Regional Distributor</fullName>
            </value>
            <value>
                <fullName>National Competitor</fullName>
            </value>
            <value>
                <fullName>Direct Manufacturer</fullName>
            </value>
            <value>
                <fullName>Import Channel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>