force-app/main/default/objects/Opportunity/fields/Credit_Check_Status__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check_Status__c</fullName>
    <description>Result of the most recent credit verification run for this deal. Error means the credit service could not be reached, which is not the same as a denial and must not be treated as one.</description>
    <label>Credit Check Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Checked</fullName>
                <default>true</default>
                <label>Not Checked</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>