force-app/main/default/objects/Opportunity/fields/Deal_Desk_Status__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk_Status__c</fullName>
    <description>Outcome of the Deal Desk review of the current pricing. Changes Requested sends the deal back to the rep without rejecting it outright; only Approved lets a deal that required review be closed as won.</description>
    <label>Deal Desk Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
                <default>true</default>
                <label>Not Required</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Changes Requested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>