force-app/main/default/objects/Opportunity/fields/External_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Order_Id__c</fullName>
    <description>Order identifier assigned by the ERP once the deal is submitted, used to look the deal up from an inbound ERP message. Deliberately not unique: a rejected submission can be corrected and resent under the same identifier.</description>
    <externalId>true</externalId>
    <label>External Order Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>