force-app/main/default/objects/Opportunity/fields/Gross_Margin_Amount__c.field-meta.xml
<CustomField>
    <fullName>Gross_Margin_Amount__c</fullName>
    <description>Absolute gross margin of the deal, written by the Apex pricing engine. Stored instead of calculated so that an approved deal keeps the exact figure it was approved on even if costs or line items change afterwards.</description>
    <label>Gross Margin Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>