force-app/main/default/objects/Opportunity/fields/Gross_Margin_Percent__c.field-meta.xml
<CustomField>
    <fullName>Gross_Margin_Percent__c</fullName>
    <description>Gross margin as a share of net revenue, written by the Apex pricing engine at the same moment as the amount. Checked against margin policy to decide whether Deal Desk review is required.</description>
    <label>Gross Margin Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>