force-app/main/default/objects/Opportunity/fields/Inventory_Check_Status__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Check_Status__c</fullName>
    <description>Whether the quoted products can be committed in the requested quantity and date. Partial means only part of the demand is covered, so the deal needs a split shipment or a new date before submission.</description>
    <label>Inventory Check Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Checked</fullName>
                <default>true</default>
                <label>Not Checked</label>
            </value>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>Unavailable</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>