force-app/main/default/objects/Opportunity/fields/Next_Step_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Date__c</fullName>
    <description>Date by which the committed next step is due. Open deals whose date has passed are reported as stalled, which is how the pipeline hygiene reports separate real activity from wishful forecasting.</description>
    <label>Next Step Date</label>
    <type>Date</type>
</CustomField>