force-app/main/default/objects/Opportunity/fields/Partner_Sourced__c.field-meta.xml
<CustomField>
    <fullName>Partner_Sourced__c</fullName>
    <description>True when a partner brought this deal in rather than direct sales. Drives revenue attribution and keeps partner-originated pipeline out of the direct team's numbers.</description>
    <defaultValue>false</defaultValue>
    <label>Partner Sourced</label>
    <type>Checkbox</type>
</CustomField>