force-app/main/default/objects/Opportunity/fields/Pricing_Status__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Status__c</fullName>
    <description>Where the deal stands in the pricing cycle. Stale means the line items changed after the last pricing run, so the stored margin and discount figures no longer describe the current deal.</description>
    <label>Pricing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Priced</fullName>
                <default>true</default>
                <label>Not Priced</label>
            </value>
            <value>
                <fullName>Priced</fullName>
            </value>
            <value>
                <fullName>Approval Required</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Stale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>