force-app/main/default/objects/Opportunity/fields/Quote_Version__c.field-meta.xml
<CustomField>
    <fullName>Quote_Version__c</fullName>
    <description>Sequence number of the quote revision currently in front of the customer. Incremented every time a new revision is issued, so a customer question can be matched to the exact document they received.</description>
    <label>Quote Version</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>