force-app/main/default/objects/Opportunity/fields/Total_Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount_Percent__c</fullName>
    <description>Aggregate discount granted across all line items measured against list price. Compared with the discount thresholds to decide which approval level a deal needs.</description>
    <label>Total Discount Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>